syntax = "proto3";

package auth;
option go_package = "github.com/abc/auth";

service AuthService {
  rpc GetRoles(GetRolesRequest) returns (GetRolesResponse) {}
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse) {}
}

enum Role {
  ADMIN = 0;
  USER = 1;
  DISABLED = 2;
}

message GetRolesRequest {
  string uid = 1;
}

message GetRolesResponse {
  repeated Role roles = 1;
}

message GetUserProfileRequest {
  string uid = 1;
}

message GetUserProfileResponse {
  UserProfile profile = 1;
}

message UserProfile {
  string uid = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  repeated Role roles = 5;
}